attached_assets/Pasted-thepaypay-DESKTOP-HUJV8K0-PumpRacer-anchor-build-WARNING-anchor-lang-version-0-30-1-and-the--1763934729101_1763934729102.txt
thepaypay@DESKTOP-HUJV8K0:~/PumpRacer$ anchor build
WARNING: `anchor-lang` version(0.30.1) and the current CLI version(0.32.1) don't match.

        This can lead to unwanted behavior. To use the same CLI version, add:

        [toolchain]
        anchor_version = "0.30.1"

        to Anchor.toml

WARNING: Adding `solana-program` as a separate dependency might cause conflicts.
To solve, remove the `solana-program` dependency and use the exported crate from `anchor-lang`.
`use solana_program` becomes `use anchor_lang::solana_program`.
Program name: `raceswap`

   Compiling raceswap v0.1.0 (/home/thepaypay/PumpRacer/programs/raceswap)
warning: unexpected `cfg` condition value: `custom-heap`
  --> programs/raceswap/src/lib.rs:17:1
   |
17 | #[program]
   | ^^^^^^^^^^
   |
   = note: expected values for `feature` are: `cpi`, `default`, `idl-build`, `no-entrypoint`, `no-idl`, and `no-log-ix-name`
   = help: consider adding `custom-heap` as a feature in `Cargo.toml`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: `#[warn(unexpected_cfgs)]` on by default
   = note: this warning originates in the macro `$crate::custom_heap_default` which comes from the expansion of the attribute macro `program` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition value: `custom-panic`
  --> programs/raceswap/src/lib.rs:17:1
   |
17 | #[program]
   | ^^^^^^^^^^
   |
   = note: expected values for `feature` are: `cpi`, `default`, `idl-build`, `no-entrypoint`, `no-idl`, and `no-log-ix-name`
   = help: consider adding `custom-panic` as a feature in `Cargo.toml`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: this warning originates in the macro `$crate::custom_panic_default` which comes from the expansion of the attribute macro `program` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition value: `anchor-debug`
  --> programs/raceswap/src/lib.rs:17:1
   |
17 | #[program]
   | ^^^^^^^^^^
   |
   = note: expected values for `feature` are: `cpi`, `default`, `idl-build`, `no-entrypoint`, `no-idl`, and `no-log-ix-name`
   = help: consider adding `anchor-debug` as a feature in `Cargo.toml`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: this warning originates in the attribute macro `program` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition value: `anchor-debug`
  --> programs/raceswap/src/lib.rs:17:1
   |
17 | #[program]
   | ^^^^^^^^^^
   |
   = note: expected values for `feature` are: `cpi`, `default`, `idl-build`, `no-entrypoint`, `no-idl`, and `no-log-ix-name`
   = help: consider adding `anchor-debug` as a feature in `Cargo.toml`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: this warning originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition value: `anchor-debug`
   --> programs/raceswap/src/lib.rs:397:10
    |
397 | #[derive(Accounts)]
    |          ^^^^^^^^
    |
    = note: expected values for `feature` are: `cpi`, `default`, `idl-build`, `no-entrypoint`, `no-idl`, and `no-log-ix-name`
    = help: consider adding `anchor-debug` as a feature in `Cargo.toml`
    = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
    = note: this warning originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition value: `anchor-debug`
   --> programs/raceswap/src/lib.rs:412:10
    |
412 | #[derive(Accounts)]
    |          ^^^^^^^^
    |
    = note: expected values for `feature` are: `cpi`, `default`, `idl-build`, `no-entrypoint`, `no-idl`, and `no-log-ix-name`
    = help: consider adding `anchor-debug` as a feature in `Cargo.toml`
    = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
    = note: this warning originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unexpected `cfg` condition value: `anchor-debug`
   --> programs/raceswap/src/lib.rs:423:10
    |
423 | #[derive(Accounts)]
    |          ^^^^^^^^
    |
    = note: expected values for `feature` are: `cpi`, `default`, `idl-build`, `no-entrypoint`, `no-idl`, and `no-log-ix-name`
    = help: consider adding `anchor-debug` as a feature in `Cargo.toml`
    = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
    = note: this warning originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: `raceswap` (lib) generated 12 warnings (5 duplicates)
    Finished `release` profile [optimized] target(s) in 3.28s
   Compiling raceswap v0.1.0 (/home/thepaypay/PumpRacer/programs/raceswap)
error[E0063]: missing fields `is_signer` and `is_writable` in initializer of `SerializedInstruction`
 --> programs/raceswap/tests/encoder.rs:8:5
  |
8 |     SerializedInstruction {
  |     ^^^^^^^^^^^^^^^^^^^^^ missing `is_signer` and `is_writable`

error[E0063]: missing fields `is_signer` and `is_writable` in initializer of `SerializedInstruction`
  --> programs/raceswap/tests/encoder.rs:15:5
   |
15 |     SerializedInstruction {
   |     ^^^^^^^^^^^^^^^^^^^^^ missing `is_signer` and `is_writable`

For more information about this error, try `rustc --explain E0063`.
error: could not compile `raceswap` (test "encoder") due to 2 previous errors
Error: Building IDL failed. Run `ANCHOR_LOG=true anchor idl build` to see the logs.
thepaypay@DESKTOP-HUJV8K0:~/PumpRacer$